[project]
name = "cbjq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "keyboard>=0.13.5",
    "mss>=9.0.2",
    "opencv-python>=4.11.0.86",
    "pillow>=10.4.0",
    "pyautogui>=0.9.54",
    "pydirectinput>=1.0.4",
    "pygetwindow>=0.0.9",
]

[tool.ruff]
line-length = 160
